# sports-data-analyzer

./: .gitignore  CMakeLists.txt  README.md  launch.sh
src/: CMakeLists.txt  inputs.txt  pfrscraper.m.cpp  pfrscraper_scraper.cpp  pfrscraper_scraper.h  pfrscraper_utils.cpp  sports-data-analyzer.m.cpp
src/pfrscraper/: CMakeLists.txt  pfrscraper_data_table.h  pfrscraper_scraper.cpp  pfrscraper_scraper.h  pfrscraper_utils.cpp  pfrscraper_utils.h
src/pfrscraper/html/: CMakeLists.txt  html_collection.cpp  html_collection.h  html_document.cpp  html_document.h  html_element.cpp  html_element.h  html_parse.cpp  html_parse.h  html_serialize.cpp  html_serialize.h  html_utils.h
