cmake_minimum_required(VERSION 3.15)
if(NOT CMAKE_BUILD_TYPE)
  set(CMAKE_BUILD_TYPE Release)
endif()
set(CMAKE_CXX_FLAGS "-Wall -Wextra")
set(CMAKE_CXX_FLAGS_RELEASE "-O3")
project(pfrscraper LANGUAGES CXX)
set (CMAKE_CXX_STANDARD 17)
include(FindPkgConfig)
pkg_check_modules(CURLPP REQUIRED curlpp)
include_directories(/usr/local/include/)
link_directories(/usr/local/lib/)
add_subdirectory(src)